telemetry: Add SearchEvents endpoint
Adds a new API endpoint to allow retrieval of telemetry data specifically
PMM Metrics within telemetry events to be used only by SuperAdmin.
